# BinarySearchSquareRoot

./: CMakeLists.txt  README.md
BinarySearchSquareRoot/: BinarySearchSquareRoot.h  CMakeLists.txt  main.cpp
